--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1127,7 +1127,7 @@ input[type=text]:focus {
         --button: #484848;
         --button-active: #1b557c;
         --location: #2c2c2c;
-        /* --location-border: #424242; */
+        --location-border: #3b3a3a;
 
         --svg: rgba(155, 155, 155, 0.7);
 
