--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -905,6 +905,7 @@ input[type=text]:focus {
     justify-content: center;
     align-items: center;
     height: 90%;
+    width: 100%;
     font-size: 24px;
     font-weight: bold;
 }
