--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -915,6 +915,7 @@ input[type=text]:focus {
     border-radius: 5px;
     background: var(--highlight-select);
     box-shadow: 0 0 3px var(--orange);
+    /* transition: background-color 0.1s ease-in-out; */
 }
 
 .dragging {
