--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -446,7 +446,7 @@ th {
     box-sizing: border-box;
     border: none;
     outline: none;
-    /* height: 100%; */
+    height: 100%;
 }
 
 .merge_file_container {
