--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -99,7 +99,7 @@ th {
 
 #main {
     position: relative;
-    /* overflow-y: auto; */
+    overflow-y: auto;
     /* overflow-x: hidden; */
     /* border: 1px solid red; */
     background: var(--main);
@@ -110,6 +110,15 @@ th {
     width: 100%;
     height: 92%;
     /* flex: 1; */
+}
+
+#main::-webkit-scrollbar {
+    background: var(--input);
+    width: 0px;
+}
+
+#main::-webkit-scrollbar-track {
+    background: var(--location);
 }
 
 #main a {
@@ -433,21 +442,11 @@ th {
     font-weight: bold;
 }
 
-.tab-content {
+.active-tab-content {
     box-sizing: border-box;
     border: none;
     outline: none;
-    height: 95%;
-    overflow-y: auto;
-}
-
-.tab-content::-webkit-scrollbar {
-    /* background: var(--scrollbar); */
-    width: 8px;
-}
-
-.tab-content::-webkit-scrollbar-track {
-    background: var(--scrollbar-track);
+    height: 100%;
 }
 
 .merge_file_container {
@@ -657,16 +656,14 @@ progress::-webkit-progress-bar {
 }
 
 .list_container {
-    margin-top: 15px;
     display: flex;
     flex-direction: column;
     border-collapse: collapse;
 }
 
 .list {
-
     display: flex;
-    padding: 0px;
+    padding: 2px;
     width: 98%;
 }
 
@@ -1140,8 +1137,8 @@ input[type=text]:focus {
 }
 
 .sticky {
-    position: sticky;
-    top: 23px;
+    /* position: sticky; */
+    /* top: 23px; */
     /* width: 80%; */
     z-index: 10000;
 }
@@ -1200,8 +1197,6 @@ input[type=text]:focus {
         --button-active: #1b557c;
         --location: #2c2c2c;
         --location-border: #3b3a3a;
-        --scrollbar: #484848;
-        --scrollbar-track: #2c2c2c;
 
         --svg: rgba(155, 155, 155, 0.7);
 
@@ -1249,8 +1244,6 @@ input[type=text]:focus {
         --button: #cfcfcf;
         --location: #e8e8e8;
         --location-border: #cfcfcf;
-        --scrollbar: #222222;
-        --scrollbar-track: #cfcfcf;
 
         --link: #4183c4;
         --highlight: rgba(0, 0, 0, 0.1);
