Fixed issue with moving tabs
If items where in the copy array and a tab was reordered the files in the array where getting copied

Added stoppropagation to the tab drop operation

Update readme

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -443,6 +443,7 @@ th {
 }
 
 .active-tab-content {
+    /* border:1px solid red !important; */
     box-sizing: border-box;
     border: none;
     outline: none;
