--- a/views/merge.html
+++ b/views/merge.html
@@ -1,12 +1,18 @@
 
 <style>
     .merge {
+        /* border: 1px solid red  !important; */
         width: 100%;
-        height: 100%
+        height: 98%;
+        /* margin-bottom: 50px; */
+        /* padding-bottom: 20px; */
+        overflow: hidden;
     }
     .merge_file_container {
         padding: 20px;
-        /* display:flex; */
+        overflow: auto;
+        width: 95%;
+        height: 100%;
     }
     .source {
         /* background: red; */
@@ -59,7 +65,6 @@
                 </tr>
             </thead>
         </table>
-
         <div class="destination main"></div>
         <div class="source"></div>
 
