Added connect_to_network function to gio
Added a default icon for electron-builder

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -164,6 +164,8 @@ th {
     padding: 10px;
     z-index: 100;
     user-select: none;
+    max-height: 50px;
+    overflow-x: auto;
 }
 
 .progress_div {
