--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -135,7 +135,8 @@
     background-color: var(--minibar);
     color: var(--text);
     border-right: 1px solid var(--border);
-    height:100%
+    height:100%;
+    z-index: 1000;
 }
 
 #minibar .bi {
