--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -43,8 +43,10 @@
 }
 
 .sb_view {
+    /* border: 1px solid var(--border); */
     margin-top: 5px;
     height: 100%;
+    padding-bottom: 20px;
 }
 
 .sb_view .item.active {
@@ -52,7 +54,7 @@
 }
 
 .sb_home {
-    height: 92%;
+    height: 80%;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -223,5 +225,13 @@
     width: 100%;
     display: block;
     padding-left: 5px;
+}
+
+.workspace a {
+    outline: none;
+}
+
+.workspace input {
+    outline: none;
 }
 
