--- a/views/merge.html
+++ b/views/merge.html
@@ -65,7 +65,7 @@
                 </tr>
             </thead>
         </table>
-        <div class="destination main"></div>
+        <!-- <div class="destination main"></div> -->
         <div class="source"></div>
 
     </div>
